--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ body {
 }
 
 header {
+  position: relative;
   width: 100%;
   height: 100vh;
   padding: 4rem;
@@ -78,18 +79,25 @@ header {
   border: 1px solid red;
 }
 header h1 {
+  position: relative;
+  max-width: 14rem;
   font-size: 5rem;
   font-weight: 500;
 }
 header h1 .solutions {
+  position: absolute;
+  top: 5rem;
+  left: 8rem;
   font-size: 3rem;
   font-weight: 300;
 }
 header .mobile-header {
+  position: absolute;
+  top: 15rem;
+  right: 2rem;
   width: 33rem;
   height: 40rem;
   background: url("../assets/img/mobile-header.png") center/cover;
-  border: 1px solid red;
 }
 
 /*# sourceMappingURL=style.css.map */
